--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
 
 :root{
+  --page-max-width: 800px;
+
+  --page-primary: #2727da;
+  --page-secondary: #e0eefc;
+
   --primary: #0d85ff;
   --primary-tint: #4dc5ff;
   --primary-shade: #0d85af;
   --secondary: #111111;
   --error: #f70606;
+
+  --thumbnail-width: 150px;
 
   --amplify-primary-color: var(--primary);
   --amplify-primary-tint: var(--primary-tint);
@@ -15,10 +22,11 @@
 /* base styles & title */
 body{
   font-family: "Source Sans Pro";
+  line-height: 1.6;
   color: var(--secondary);
+  margin: 0;
 }
 
-/* Amplify UI Component styles */
-amplify-s3-image {
-  --height: 200px;
+*, ::after, ::before {
+  box-sizing: border-box;
 }
