--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App{
-  max-width: 960px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .error{
   color: var(--error);
+}
+
+.container {
+  max-width: var(--page-max-width);
+  margin: 4em auto 2em;
 }
