break out image control component

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root{
   --page-max-width: 800px;
 
-  --page-primary: #2727da;
+  --page-primary: #0e25f7;
   --page-secondary: #e0eefc;
 
   --primary: #0d85ff;
