--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #0e25f7;
+  background: var(--page-primary);
   mix-blend-mode: overlay;
 }
 
