minor tweaks to primary color

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
   --page-primary: #0e25f7;
   --page-secondary: #e0eefc;
 
-  --primary: #0d85ff;
-  --primary-tint: #4dc5ff;
-  --primary-shade: #0d85af;
+  --primary: #0e25f7;
+  --primary-tint: #0e25b7;
+  --primary-shade: #0e2577;
   --secondary: #111111;
   --error: #f70606;
 
