--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,3 @@
-
 #home {
   position: absolute;
   right: 0;
@@ -21,6 +20,16 @@
   height: 100%;
   object-fit: cover;
   opacity: 0.8;
+}
+
+.home-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.5em 2em;
+  width: 100%;
+  display: inline-block;
+  z-index: 2;
 }
 
 .home-overlay
