--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -53,7 +53,7 @@
 
 .home-content h2
 {
-  font-size: 5em;
+  font-size: var(--fs-h2);
   font-weight: 800;
   color: #fff;
   line-height: 1em;
@@ -62,7 +62,7 @@
 
 .home-content h3
 {
-  font-size: 4em;
+  font-size: var(--fs-h3);
   font-weight: 700;
   color: #fff;
   line-height: 1em;
@@ -71,7 +71,7 @@
 
 .home-content p
 {
-  font-size: 1.1em;
+  font-size: var(--fs-p);
   color: #fff;
   margin: 20px 0;
   font-weight: 400;
@@ -81,7 +81,7 @@
 .home-content a
 {
   display: inline-block;
-  font-size: 1em;
+  font-size: var(--fs-a);
   background: #fff;
   padding: 10px 30px;
   text-transform: uppercase;
